{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 10,
  "lineage": "de976613-a324-7459-a189-cf79d4a34e33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rearc_quest_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d54604676873b4ec",
            "arn": "arn:aws:ec2:ap-south-1:864683085463:instance/i-01708631ba2f824eb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01708631ba2f824eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4077587402b8950",
            "private_dns": "ip-10-0-1-200.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "public_ip": "43.205.144.219",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04c1a4ca4689b0e62",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c291f50fb00fae98",
            "tags": {
              "Name": "rearc-quest-ec2"
            },
            "tags_all": {
              "Name": "rearc-quest-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021893e8367d335d1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rearc_quest_SG",
            "aws_subnet.rearc_quest_public_subnet",
            "aws_vpc.rearc_quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rearc_quest_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864683085463:internet-gateway/igw-03a0b2bef2be92162",
            "id": "igw-03a0b2bef2be92162",
            "owner_id": "864683085463",
            "region": "ap-south-1",
            "tags": {
              "Name": "rearc-quest-igw"
            },
            "tags_all": {
              "Name": "rearc-quest-igw"
            },
            "vpc_id": "vpc-0e657b83bb3e9ca79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rearc_quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rearc_quest_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864683085463:route-table/rtb-08aefccab57b56e7d",
            "id": "rtb-08aefccab57b56e7d",
            "owner_id": "864683085463",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a0b2bef2be92162",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rearc-quest-public-rt"
            },
            "tags_all": {
              "Name": "rearc-quest-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e657b83bb3e9ca79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.rearc_quest_igw",
            "aws_vpc.rearc_quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rearc_quest_subnet_assoction",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd100defabd633a1",
            "region": "ap-south-1",
            "route_table_id": "rtb-08aefccab57b56e7d",
            "subnet_id": "subnet-0c291f50fb00fae98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.rearc_quest_igw",
            "aws_route_table.rearc_quest_public_rt",
            "aws_subnet.rearc_quest_public_subnet",
            "aws_vpc.rearc_quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rearc_quest_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864683085463:security-group/sg-021893e8367d335d1",
            "description": "allow HTTP and SSH acess",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021893e8367d335d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "rearc_quest_SG",
            "name_prefix": "",
            "owner_id": "864683085463",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rearc-quest-sg"
            },
            "tags_all": {
              "Name": "rearc-quest-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e657b83bb3e9ca79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rearc_quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rearc_quest_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864683085463:subnet/subnet-0c291f50fb00fae98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c291f50fb00fae98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "864683085463",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "rearc-quest-public-subnet"
            },
            "tags_all": {
              "Name": "rearc-quest-public-subnet"
            },
            "vpc_id": "vpc-0e657b83bb3e9ca79"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rearc_quest_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rearc_quest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:864683085463:vpc/vpc-0e657b83bb3e9ca79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069e4ae7860f08eab",
            "default_route_table_id": "rtb-0c8cb897583ab5f71",
            "default_security_group_id": "sg-084f4492f12bfe756",
            "dhcp_options_id": "dopt-0bd3b8abeba6c924b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e657b83bb3e9ca79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8cb897583ab5f71",
            "owner_id": "864683085463",
            "region": "ap-south-1",
            "tags": {
              "Name": "rearc-quest-vpc"
            },
            "tags_all": {
              "Name": "rearc-quest-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}